[package]
name = "range-set"
version = "0.0.12"
authors = ["Shane Pearman <spearman@github.com>", "Alex Moon <alex.r.moon@gmail.com>"]
license = "Apache-2.0"
description = "Smallvec-backed containers of sorted integer ranges"
repository = "https://github.com/spearman/range-set"
readme = "README.md"
edition = "2021"

[dependencies]
num-traits = "0.2.*"
serde = { version = "1.*", optional = true }
smallvec = { version = "1.*" }

[dev-dependencies]
rand = "0.8.*"
rand_xorshift = "0.3.*"

[features]
derive_serdes = ["serde", "smallvec/serde"]
